Implemented Dirichlet tessellation using Euclidean distance

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,9 @@ export("as.data.frame.linfun")
 export("as.data.frame.linim")
 export("as.data.frame.lintess")
 export("as.function.linfun")
+export("as.function.linim")
+export("as.function.linnet")
+export("as.function.lintess")
 export("as.im.linim")
 export("as.linfun")
 export("as.linfun.linfun")
@@ -402,6 +405,9 @@ S3method("affine", "lintess")
   S3method("as.data.frame", "linim")
 S3method("as.data.frame", "lintess")
   S3method("as.function", "linfun")
+  S3method("as.function", "linim")
+  S3method("as.function", "linnet")
+  S3method("as.function", "lintess")
   S3method("as.im", "linim")
 S3method("as.linfun", "linfun")
   S3method("as.linfun", "linim")
