--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export("as.linfun.linnet")
 export("as.linfun.lintess")
 export("as.linim")
 export("as.linim.default")
+export("as.linim.function")
 export("as.linim.linfun")
 export("as.linim.linim")
 export("as.linnet")
@@ -151,6 +152,8 @@ export("formula.lppm")
 export("getglmdata.lppm")
 export("getglmfit.lppm")
 export("getglmsubset.lppm")
+export("harmonise.linim")
+export("harmonize.linim")
 export("hasglmfit.lppm")
 export("heatkernelapprox")
 export("identify.linnet")
@@ -210,6 +213,7 @@ export("linfun")
 export("[.linim")
 export("[<-.linim")
 export("linim")
+export("linim.apply")
 export("LinimListOp")
 export("LinimOp")
 export("[.linnet")
@@ -414,6 +418,7 @@ S3method("as.linfun", "linfun")
   S3method("as.linfun", "linnet")
   S3method("as.linfun", "lintess")
   S3method("as.linim", "default")
+  S3method("as.linim", "function")
   S3method("as.linim", "linfun")
   S3method("as.linim", "linim")
  S3method("as.linnet", "linfun")
@@ -483,6 +488,8 @@ S3method("flipxy", "lintess")
 S3method("getglmdata", "lppm")
 S3method("getglmfit", "lppm")
 S3method("getglmsubset", "lppm")
+S3method("harmonise", "linim")
+S3method("harmonize", "linim")
 S3method("hasglmfit", "lppm")
   S3method("identify", "linnet")
   S3method("identify", "lintess")
