Improvement to integral.linfun

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -232,6 +232,7 @@ export("lppm.lpp")
 export("lurking.lpp")               
 export("lurking.lppm")               
 export("makeLinnetTolerance")
+export("mapLinnetToLine")
 export("marginalIntegralOfLinim")
 export("marks.linnet")
 export("marks<-.linnet")
