levelset method for linfun

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -175,6 +175,7 @@ export("is.stationary.exactlppm")
 export("is.stationary.lppm")
 export("joinVertices")
 export("ldtEngine")
+export("levelset.linfun")
 export("lineardirichlet")
 export("lineardisc")
 export("lineardiscEngine")
@@ -507,6 +508,7 @@ S3method("is.poisson", "exactlppm")
 S3method("is.poisson", "lppm")
 S3method("is.stationary", "exactlppm")
 S3method("is.stationary", "lppm")
+S3method("levelset", "linfun")
   S3method("[", "linim")
   S3method("[", "linnet")
   S3method("logLik", "lppm")
