lurking.lppm handles envelope=TRUE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -515,7 +515,8 @@ S3method("levelset", "linfun")
   S3method("[", "lpp")
 S3method("lppm", "formula")
 S3method("lppm", "lpp")
-S3method("lurking", "lppm")
+ S3method("lurking", "lpp")
+ S3method("lurking", "lppm")
 S3method("marks", "linnet")
 S3method("marks", "lintess")
   S3method("mean", "linim")
