New function roadways()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -318,6 +318,7 @@ export("rjitter.lpp")
 export("rjitterlpp")
 export("rlpp")
 export("rmaxEuclidean")
+export("roadways")
 export("roc.lpp")
 export("roc.lppm")
 export("rotate.linnet")
