roadways renamed highways; changed options

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -156,6 +156,7 @@ export("harmonise.linim")
 export("harmonize.linim")
 export("hasglmfit.lppm")
 export("heatkernelapprox")
+export("highways")
 export("identify.linnet")
 export("identify.lintess")
 export("identify.lpp")
@@ -318,7 +319,6 @@ export("rjitter.lpp")
 export("rjitterlpp")
 export("rlpp")
 export("rmaxEuclidean")
-export("roadways")
 export("roc.lpp")
 export("roc.lppm")
 export("rotate.linnet")
