highways renamed threads

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -156,7 +156,6 @@ export("harmonise.linim")
 export("harmonize.linim")
 export("hasglmfit.lppm")
 export("heatkernelapprox")
-export("highways")
 export("identify.linnet")
 export("identify.lintess")
 export("identify.lpp")
@@ -357,6 +356,7 @@ export("terminalvertices")
 export("terms.lppm")
 export("text.lpp")
 export("thinNetwork")
+export("threads")
 export("tile.lengths")
 export("tilenames.lintess")
 export("tilenames<-.lintess")
