--- a/NAMESPACE
+++ b/NAMESPACE
@@ -337,6 +337,7 @@ export("shift.linim")
 export("shift.linnet")
 export("shift.lintess")
 export("shift.lpp") 
+export("shortestpath")
 export("simulate.lppm")
 export("Smooth.lpp")
 export("sortalongsegment")
