--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.linnet
-Version: 3.4-0.021
-Date: 2026-01-28
+Version: 3.4-1
+Date: 2026-01-31
 Title: Linear Networks Functionality of the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
@@ -25,7 +25,7 @@ Authors@R: c(person("Adrian", "Baddeley",
 	     person("Ottmar", "Cronie",
 	            role = "ctb"))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
-Depends: R (>= 3.5.0), stats, graphics, grDevices, methods, utils, spatstat.data (>= 3.1-9), spatstat.univar (>= 3.1-6), spatstat.geom (>= 3.7), spatstat.random (>= 3.4-4), spatstat.explore (>= 3.7), spatstat.model (>= 3.6)
+Depends: R (>= 3.5.0), stats, graphics, grDevices, methods, utils, spatstat.data (>= 3.1-9), spatstat.univar (>= 3.1-6), spatstat.geom (>= 3.7), spatstat.random (>= 3.4-4), spatstat.explore (>= 3.7), spatstat.model (>= 3.6-1)
 Imports: Matrix, spatstat.utils (>= 3.2-1), spatstat.sparse (>= 3.1)
 Suggests: goftest, locfit, spatstat (>= 3.5)
 Description: Defines types of spatial data on a linear network
