Bug fixes and minor additions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -244,6 +244,7 @@ export("Math.linim")
 export("Math.linimlist")
 export("mean.linim")
 export("median.linim")
+export("mergeTiles.lintess")
 export("model.frame.lppm")
 export("model.images.lppm")
 export("model.matrix.lppm")
@@ -523,6 +524,7 @@ S3method("marks", "linnet")
 S3method("marks", "lintess")
   S3method("mean", "linim")
   S3method("median", "linim")
+ S3method("mergeTiles", "lintess")
  S3method("model.frame", "lppm")
   S3method("model.images", "lppm")
    S3method("model.matrix", "lppm")
